# Gobblets

./: README.md  gobblet.cabal  stack.yaml
src/: Board.hs  Deck.hs  Main.hs  Minimax.hs  Move.hs  Player.hs  Rules.hs  State.hs  Test.hs
